# morph_gnt_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  verse.rs  word.rs
src/db/: mod.rs
